--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
     <body>
+        <script src="script.js"></script> 
         <header>
         <video autoplay muted loop class="background-video">
             <source src="C:\Users\Dell\Downloads\websitelessgo\1010874243339390's2025-2-4-10.1.382 story - Trim (online-video-cutter.com).mp4" type="video/mp4">
@@ -20,12 +21,13 @@
 <nav>
     <a href="index.html"><img src="C:\Users\Dell\Downloads\websitelessgo\images-removebg-preview.png"></a>
     <div class="nav-links">
+        <marquee>Pratical Education is our motto</marquee>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Staffs</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="staffs.html">Staffs</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="Contact.html">Contact</a></li>
             
         </ul>
     </div>
