--- a/about.html
+++ b/about.html
@@ -17,11 +17,12 @@
     <a href="index.html"><img src="C:\Users\Dell\Downloads\websitelessgo\images-removebg-preview.png"></a>
     <div class="nav-links">
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Staffs</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="staffs.html">Staffs</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+            
             
         </ul>
     </div>
@@ -33,7 +34,7 @@
             <div class="row">
                 <div class="about-col">
                     <h1>
-                We are Pathri's Biggest Secondary School
+           Introduction
                     </h1>
                     <p>We are one of the most reputed schools of purbanchal.We offer various streams along with great transportation,canteen,classroom,labs,project facilities.</p>
                 <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
@@ -47,8 +48,7 @@
 
 <section class="footer">
     <h4>About Us</h4>
-    <p>
-    </p>
+    <p> </p>
     <div class="icons">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
             <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
