--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="row">
     <div class="Features-col">
         <h3>Buses</h3>
-        <img src="C:\Users\Dell\Downloads\websitelessgo\301918273_509715424487617_1922679689261285335_n.jpg">
+        <img src="Images/301918273_509715424487617_1922679689261285335_n.jpg">
         <p>We provide convinient transportation services to our students near Urlabari,Damak,Madhumalla,Jante,Kanepokhari.</p></div>
         
         <div class="Features-col">
@@ -148,7 +148,7 @@ We offer various course regarding on various subject matter with the latest curr
 </section>
 <section class="testimonials">
     <h1>Words from our students</h1>
-    <p>blah </p>
+    <p>Our esteemed institution has given lifelong valuable lessons to many of our students who have given their opinion below.</p>
     <div class="row">
         <div class="testimonials-col">
             <img src="C:\Users\Dell\Downloads\websitelessgo\357066192_753011796824644_1869128188178813120_n.jpg">
