--- a/staffs.html
+++ b/staffs.html
@@ -31,7 +31,32 @@
 </nav>
 <h1>Staffs</h1>
 
-      
+        </section>
+<section class="staffs">
+    <div class="row">
+        <p>Our highly experienced and friendly staff are the key factor of panchayat's recent outstanding academic performences.</p>
+        <div class="staffs-col">
+            <img src="Images/426532097_892959666163189_1072160859314615371_n.jpg">
+            <div class="layer">
+                <h3>Principal</h3>
+                <p>Arjun Budhathoki</p>
+            </div>
+        </div>
+            <div class="staffs-col">
+                <img src="Images/426576404_892957092830113_947281793453866780_n.jpg">
+                <div class="layer">
+                    <h3>Chairman</h3>
+                    <p></p>
+                </div></div>
+                <div class="staffs-col">
+                    <img src="Images/427927651_896301035829052_1843676028905729581_n.jpg">
+                    <div class="layer">
+                        <h3>Co-ordinator</h3>
+                        <p>Chakra Dhar Gautam</p>
+                    </div></div>
+                    
+        </div>
+</section>
 
 
 <section class="footer">
