--- a/Contact.html
+++ b/Contact.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Corrected Font Awesome link -->
 </head>
 <body>
+    <script src="script.js"></script> 
     
     <section class="sub-header">
         <nav>
@@ -28,7 +29,7 @@
         </nav>
         <h1></h1>
         <section class="location">
-            <h1>Contact Us</h1>
+            <h1></h1>
             <div class="location-col">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28523.72941949714!2d87.55570191293066!3d26.665569210538756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e589bc3b42ceff%3A0xa67d0415f53b3a0b!2sShree%20Panchayat%20Higher%20Secondary%20School!5e0!3m2!1sen!2snp!4v1738949824512!5m2!1sen!2snp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
