--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <script src="script.js"></script> 
         <header>
         <video autoplay muted loop class="background-video">
-            <source src="C:\Users\Dell\Downloads\websitelessgo\1010874243339390's2025-2-4-10.1.382 story - Trim (online-video-cutter.com).mp4" type="video/mp4">
+            <source src="Images/1010874243339390's2025-2-4-10.1.382 story - Trim (online-video-cutter.com).mp4" type="video/mp4">
           
         </video>
         <section class="header">
 <nav>
-    <a href="index.html"><img src="C:\Users\Dell\Downloads\websitelessgo\images-removebg-preview.png"></a>
+    <a href="index.html"><img src="Images/images-removebg-preview.png"></a>
     <div class="nav-links">
         <marquee>Pratical Education is our motto</marquee>
         <ul>
@@ -51,11 +51,11 @@
         
         <div class="Features-col">
             <h3>Labs</h3>
-            <img src="C:\Users\Dell\Downloads\websitelessgo\417923641_871751418284014_4341612704213032079_n.jpg">
+            <img src="Images/417923641_871751418284014_4341612704213032079_n.jpg">
             <p>Well equipped labs are available with enough materials.</p></div>
             <div class="Features-col">
                 <h3>Classes</h3>
-                <img src="C:\Users\Dell\Downloads\websitelessgo\417772017_871747981617691_3394102843857393745_n.jpg">
+                <img src="Images/417772017_871747981617691_3394102843857393745_n.jpg">
                 <p>Comfortable classes with digital board are available.</p>
             </div>
     </div>
@@ -68,22 +68,22 @@ We offer various course regarding on various subject matter with the latest curr
     </p>
     <div class="row">
         <div class="courses-col">
-            <img src="C:\Users\Dell\Downloads\websitelessgo\412657973_859970166128806_5946733857773887240_n.jpg">
+            <img src="Images/412657973_859970166128806_5946733857773887240_n.jpg">
             <div class="layer">
                 <h3>Computer</h3>
             </div></div>
             <div class="courses-col">
-                <img src="C:\Users\Dell\Downloads\websitelessgo\418138169_871750704950752_2672696023714993380_n.jpg">
+                <img src="Images/418138169_871750704950752_2672696023714993380_n.jpg">
                 <div class="layer">
                     <h3>Biology</h3>
                 </div></div>
                 <div class="courses-col">
-                    <img src="C:\Users\Dell\Downloads\websitelessgo\409806341_855066726619150_6424601865686702267_n.jpg">
+                    <img src="Images/409806341_855066726619150_6424601865686702267_n.jpg">
                     <div class="layer">
                         <h3>Commerce</h3>
                     </div></div>
                     <div class="courses-col">
-                        <img src="C:\Users\Dell\Downloads\websitelessgo\406975365_848165743975915_5286885936183686040_n.jpg">
+                        <img src="Images/406975365_848165743975915_5286885936183686040_n.jpg">
                         <div class="layer">
                             <h3>Arts</h3>
                         </div></div>
@@ -95,19 +95,19 @@ We offer various course regarding on various subject matter with the latest curr
     <p>Classifcation of students studying in Panchayat by stream,Gender,class.</p>
     <div class="row">
         <div class="Pssinnumbers-col">
-            <img src="C:\Users\Dell\Downloads\websitelessgo\Untitled design (3).png">
+            <img src="Images/Untitled design (3).png">
         <div class="layer">
             <h3>By Stream</h3>
         </div>
     </div>
     <div class="Pssinnumbers-col">
-            <img src="C:\Users\Dell\Downloads\websitelessgo\Untitled design (5).png">
+            <img src="Images/Untitled design (5).png">
         <div class="layer">
             <h3>By Gender</h3>
         </div>
     </div>
     <div class="Pssinnumbers-col">
-            <img src="C:\Users\Dell\Downloads\websitelessgo\Untitled design (4).png">
+            <img src="Images/Untitled design (4).png">
         <div class="layer">
             <h3>By Classes</h3>
         </div>
@@ -121,25 +121,25 @@ We offer various course regarding on various subject matter with the latest curr
     <p>Panchayat secondary school conducts various educational tours,cultural programs,sports etc to brodean student's cultural perspective and geographical perspective.</p>
     <div class="row">
         <div class="events-col">
-            <img src="C:\Users\Dell\Downloads\websitelessgo\472309184_1132434528882367_4294912225760919919_n.jpg">
+            <img src="Images/472309184_1132434528882367_4294912225760919919_n.jpg">
             <div class="layer">
                 <h3>Educational tours</h3>
             </div>
         </div>
         <div class="events-col">
-            <img src="C:\Users\Dell\Downloads\websitelessgo\468360205_1105703924888761_8576021953210808143_n - Copy.jpg">
+            <img src="Images/468360205_1105703924888761_8576021953210808143_n - Copy.jpg">
             <div class="layer">
                 <h3>Cultural programs</h3>
             </div>
         </div>
         <div class="events-col">
-            <img src="C:\Users\Dell\Downloads\websitelessgo\Untitled design (6).png">
+            <img src="Images/Untitled design (6).png">
             <div class="layer">
                 <h3>Food festivals</h3>
             </div>
         </div>
         <div class="events-col">
-            <img src="C:\Users\Dell\Downloads\websitelessgo\426533561_895745995884556_2261751827189813972_n [photoutils.com].jpg">
+            <img src="Images/426533561_895745995884556_2261751827189813972_n [photoutils.com].jpg">
             <div class="layer">
                 <h3>Games and sports</h3>
             </div>
@@ -151,7 +151,7 @@ We offer various course regarding on various subject matter with the latest curr
     <p>Our esteemed institution has given lifelong valuable lessons to many of our students who have given their opinion below.</p>
     <div class="row">
         <div class="testimonials-col">
-            <img src="C:\Users\Dell\Downloads\websitelessgo\357066192_753011796824644_1869128188178813120_n.jpg">
+            <img src="Images/357066192_753011796824644_1869128188178813120_n.jpg">
             <div>
                 <p>Panchayat provides studious environment with excellent and helpful teachers,which allowed me to reach my full potential and work upon my mistakes.I would highly recommend anyone to join here.</p>
             <h3>Diwas Nepal</h3>
@@ -173,7 +173,7 @@ We offer various course regarding on various subject matter with the latest curr
          </div>
         </div>
         <div class="testimonials-col">
-            <img src="C:\Users\Dell\Downloads\websitelessgo\358544728_752997273492763_1081768479951678341_n.jpg">
+            <img src="Images/358544728_752997273492763_1081768479951678341_n.jpg">
             <div>
              <p>Helpful teachers and friendly evironment is what differentiates panchayat from other schools.I would highly recommend anyone to join here.</p>
             <h3>Ankita Ghimire</h3>
