--- a/Contact.html
+++ b/Contact.html
@@ -15,7 +15,7 @@
     
     <section class="sub-header">
         <nav>
-            <a href="index.html"><img src="C:\Users\Dell\Downloads\websitelessgo\images-removebg-preview.png" alt="Logo"></a>
+            <a href="index.html"><img src="Images/images-removebg-preview.png"></a>
             <div class="nav-links">
                 <ul>
                     <li><a href="index.html">Home</a></li>
