--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         
         <section class="sub-header">
 <nav>
-    <a href="index.html"><img src="C:\Users\Dell\Downloads\websitelessgo\images-removebg-preview.png"></a>
+    <a href="index.html"><img src="Images/images-removebg-preview.png"></a>
     <div class="nav-links">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -42,7 +42,7 @@
                 <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
                 </div>
                 <div class="about-col">
-                    <img src="C:\Users\Dell\Downloads\websitelessgo\434227606_921735976618891_4433648020981342999_n.jpg">
+                    <img src="Images/434227606_921735976618891_4433648020981342999_n.jpg">
                 </div>
             </div>
         </section>
